<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <LinearLayout
        android:id="@+id/layout_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/first_name_et"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:textSize="18sp"
            android:layout_weight="0.5"
            android:paddingStart="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/view_background_form"/>

        <EditText
            android:id="@+id/last_name_et"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/last_name"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_weight="0.5"
            android:paddingStart="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/view_background_form"/>

    </LinearLayout>


    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textSize="18sp"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/view_background_form"
        app:layout_constraintTop_toBottomOf="@id/layout_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        android:textSize="18sp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/view_background_form"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="11"
        android:textSize="18sp"
        android:hint="@string/phone_number"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/view_background_form"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


            <Button
                android:id="@+id/calendar_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:elevation="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/date_of_birth"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingStart="8dp"
                android:gravity="left|center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/view_background_form_unfocused"
                app:layout_constraintTop_toBottomOf="@id/phone_et"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_down_arrow"
                app:layout_constraintTop_toTopOf="@id/calendar_et"
                app:layout_constraintBottom_toBottomOf="@id/calendar_et"
                app:layout_constraintEnd_toEndOf="@id/calendar_et"/>


        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:elevation="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/create_account"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background_blue"
            app:layout_constraintTop_toBottomOf="@id/calendar_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/or_login_with_social_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_register_with"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <Button
            android:id="@+id/button_gmail_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:visibility="gone"
            android:elevation="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_with_gmail"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background_blue"
            app:layout_constraintTop_toBottomOf="@id/or_login_with_social_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/button_facebook_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:visibility="gone"
            android:elevation="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_with_facebook"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background_blue"
            app:layout_constraintTop_toBottomOf="@id/button_gmail_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_twitter_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone"
            android:maxLines="1"
            android:elevation="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_with_twitter"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background_blue"
            app:layout_constraintTop_toBottomOf="@id/button_facebook_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>