<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textSize="18sp"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/view_background_form"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password"
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/view_background_form"
            app:layout_constraintTop_toBottomOf="@id/email_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>





        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:elevation="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background_blue"
            app:layout_constraintTop_toBottomOf="@id/password_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/or_login_with_social_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_gmail_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/or_login_with_social_label"
            app:layout_constraintStart_toStartOf="@id/button_facebook_login"
            app:layout_constraintEnd_toEndOf="@id/button_facebook_login"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/button_gmail_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_twitter_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:elevation="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_with_twitter"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background_blue"
            app:layout_constraintTop_toBottomOf="@id/button_facebook_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/or_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or Register"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_twitter_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>